--- a/base_indonesia/views/inherit_res_partner.xml
+++ b/base_indonesia/views/inherit_res_partner.xml
@@ -29,7 +29,7 @@
                      <header>
                          <button name="action_confirm" states="draft" type="object" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
                          <button name="action_approved" states="confirm" type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
-                         <button name="action_nonactive" states="done" type="object" string="Non Actived" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
+                         <button name="toggle_active" states="done" type="object" string="Archive" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
                          <button name="action_set_to_draft" states="confirm" type="object" string="Set To Draft" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
                          <field name="state" widget="statusbar"
                            statusbar_visible="draft"
@@ -49,6 +49,31 @@
                       <field name="partner_code" string="Partner code" invisible="1"/>
                       <field name="partner_running_number" string="Partner No"/>
                  </xpath>
+                 <xpath expr="//field[@name='street']" position="replace">
+                      <field name="street" placeholder="Street..." required="1" class="o_address_street" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='street2']" position="replace">
+                      <field name="street2" placeholder="Street 2..." required="1" class="o_address_street" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='city']" position="replace">
+                      <field name="city" placeholder="City" required="1" class="o_address_city" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='state_id']" position="replace">
+                      <field name="state_id" class="o_address_state" required="1"  placeholder="State" options="{&quot;no_open&quot;: True}" on_change="onchange_state(state_id)" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}" context="{'country_id': country_id, 'zip': zip}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='zip']" position="replace">
+                      <field name="zip" placeholder="ZIP" required="1" class="o_address_zip" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='country_id']" position="replace">
+                      <field name="country_id" placeholder="Country" required="1" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='phone']" position="replace">
+                      <field name="phone" widget="phone" required="1"/>
+                 </xpath>
+                 <xpath expr="//field[@name='mobile']" position="replace">
+                      <field name="mobile" widget="phone" required="1"/>
+                 </xpath>
+
                  <xpath expr="//notebook" position="inside">
                      <page  string="Business Permit" autofocus="autofocus">
                         <field name="businesspermit_ids"
