--- a/base_indonesia/views/inherit_res_partner.xml
+++ b/base_indonesia/views/inherit_res_partner.xml
@@ -29,7 +29,6 @@
                      <header>
                          <button name="action_confirm" states="draft" type="object" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
                          <button name="action_approved" states="confirm" type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
-                         <button name="toggle_active" states="done" type="object" string="Archive" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
                          <button name="action_set_to_draft" states="confirm" type="object" string="Set To Draft" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
                          <field name="state" widget="statusbar"
                            statusbar_visible="draft"
@@ -44,6 +43,11 @@
                  <xpath expr="//field[@name='category_id']" position="after">
                       <field name="partner_product" string="Partner Product"/>
                       <field name="product_category_ids" placeholder="Product Category ..." string="Product Category" widget="many2many_tags"/>
+                 </xpath>
+                 <xpath expr="//button[@name='toggle_active']" position="replace">
+                    <button name="toggle_active" type="object" groups="purchase_indonesia.group_purchase_request_finance_procurement" class="oe_stat_button" icon="fa-archive">
+                            <field name="active" widget="boolean_button" options="{&quot;terminology&quot;: &quot;archive&quot;}"/>
+                        </button>
                  </xpath>
                  <xpath expr="//field[@name='website']" position="before">
                       <field name="partner_code" string="Partner code" invisible="1"/>
