--- a/purchase_indonesia/views/inherit_stock_picking.xml
+++ b/purchase_indonesia/views/inherit_stock_picking.xml
@@ -29,11 +29,15 @@
                      <field name="pr_source" string="REF PP NO" attrs="{'readonly': [('state', '=', 'done')]}"/>
                      <field name="delivery_number" string="DO Reference" attrs="{'readonly': [('state', '=', 'done')]}"/>
                  </xpath>
+                 <xpath expr="//field/tree/field[@name='product_qty']" position="before">
+                     <field name="initial_qty" string="Init QTY"/>
+                 </xpath>
                  <xpath expr="//button[@name='do_new_transfer']" position="replace">
                      <button name="do_new_transfer" states="draft,partially_available,assigned" string="Validate" groups="purchase_request.group_purchase_request_user" type="object" class="oe_highlight"/>
                  </xpath>
                  <xpath expr="//button[@name='show_details']" position="before">
-                     <button name="split_quantities" attrs="{'invisible': ['|',('qty_done', '=', 0),('qty_done', '&lt;', 0)]}" class="oe_link"  icon="fa-list" string="Split" type="object"/>
+                     <field name="checking_split" invisible="1"/>
+                     <button name="split_quantities2" attrs="{'invisible': ['|',('qty_done', '=', 0),('qty_done', '&lt;', 0)]}" class="oe_link"  icon="fa-list" string="Split ha" type="object"/>
                      <button name="do_force_donce"
                       class="oe_link"  attrs="{'invisible': ['|',('qty_done', '&gt;', 0),('qty_done', '&lt;', 0)]}" icon="fa-scissors" string="Force Done" type="object"/>
                  </xpath>
@@ -49,6 +53,17 @@
                  </xpath>
              </field>
          </record>
+
+        <record model="ir.ui.view" id="view_stock_picking_tree_inherit_complete_name">
+            <field name="name">stock.picking.wave.inherit.tree</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.vpicktree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="before">
+                    <field name="complete_name_picking" string="GRN/SRN No"/>
+                </xpath>
+            </field>
+        </record>
 
 
     </data>
