--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -66,6 +66,12 @@
                            <field name="complete_name" class="oe_inline" invisible="0"
                                readonly="1" string="Request Reference"/>
                  </xpath>
+                 <xpath expr="//field[@name='state']" position="after">
+                     <field name="count_po_done" string="PO Dn"/>
+                     <field name="count_po_partial" string="PO Partial"/>
+                     <field name="count_grn_done" string="GRN/SRN Dn"/>
+                     <field name="count_grn_assigned" string="GRN/SRN Av"/>
+                 </xpath>
              </field>
          </record>
 
@@ -139,7 +145,7 @@
 
                  <xpath expr="//button[@name='button_to_approve']" position="replace">
                      <button name="button_to_approve" states="button_to_approve"
-                            string="Approve Finance" type="object"
+                            string="Approve" type="object"
                             class="oe_highlight"/>
 
                  </xpath>
@@ -155,7 +161,7 @@
                  <xpath expr="//button[@name='button_approved']" position="replace">
                        <button name="button_approved"
                             states="to_approve"
-                            string="Approve Finance"
+                            string="Approve"
                             type="object"
                             class="oe_highlight"
                             groups="purchase_request.group_purchase_request_manager"/>
@@ -178,17 +184,17 @@
                             class="oe_highlight"
                              groups="purchase_request.group_purchase_request_user"/>
                      <button name="action_confirm1"
-                            string="Approve Dept Head" type="object"
+                            string="Approve" type="object"
                              attrs="{'invisible': [('validation_user','!=',True)]}"
                             class="oe_highlight" />
                      <button name="action_confirm2" states="approval2"
-                            string="Approve Div Head" type="object"
+                            string="Approve" type="object"
                             class="oe_highlight" groups="purchase_request.group_purchase_request_div_head"/>
                      <button name="action_budget" states="budget"
-                            string="Approve Budget" type="object"
+                            string="Approve" type="object"
                             class="oe_highlight" groups="purchase_request.group_purchase_request_budget"/>
                      <button name="action_technic"
-                            string="Approve Technical Check" type="object"
+                            string="Approve" type="object"
                             class="oe_highlight" attrs="{'invisible': [('validation_technic','!=',True)]}"/>
                      <button name="action_financial_approval1"
                              attrs="{'invisible': [('validation_finance','!=',True)]}"
