--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -114,11 +114,11 @@
                      <header coolspan="10">
                             <button name="action_send" states="draft"  type="object" string="Send QCF" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
                             <button name="action_confirm" states="confirm" type="object" string="Confirm" class="oe_highlight" groups="purchase_request.group_purchase_request_procstaff"/>
-                            <button name="action_approve" states="approve" type="object" string="Approval Finance" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
-                            <button name="action_approve1" states="approve1"  type="object" string="Approval GM" class="oe_highlight" groups="purchase_request.group_purchase_request_div_head"/>
-                            <button name="action_approve2" states="approve2" type="object" string="Approval Director" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_director"/>
-                            <button name="action_approve3" states="approve3"  type="object" string="Approval President Director" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_president_director"/>
-                            <button name="action_approve4" states="approve4"  type="object" string="Approval Head Of RO" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_head_of_ro"/>
+                            <button name="action_approve" states="approve" type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_finance_procurement"/>
+                            <button name="action_approve1" states="approve1"  type="object" string="Approve" class="oe_highlight" groups="purchase_request.group_purchase_request_div_head"/>
+                            <button name="action_approve2" states="approve2" type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_director"/>
+                            <button name="action_approve3" states="approve3"  type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_president_director"/>
+                            <button name="action_approve4" states="approve4"  type="object" string="Approve" class="oe_highlight" groups="purchase_indonesia.group_purchase_request_head_of_ro"/>
                             <button name="%(action_quotation_comparison_reject)d" states="confirm" string="Reject QCF" type="action" groups="purchase_request.group_purchase_request_manager"/>
                             <button name="button_draft" states="draft" type="object" string="Cancel"/>
                             <button name="print_qcf" string="Print QCF" type="object" groups="base.group_user"/>
