--- a/estate_payroll/views/report_estate_payslip.xml
+++ b/estate_payroll/views/report_estate_payslip.xml
@@ -24,24 +24,36 @@
 
                             <!-- Payroll Cover Slip - show list of all by team -->
 
-                            <h2 class="text-center">Payroll <span t-esc="batch.name"/><br/>
-                                <small>
-                                    <t t-if="batch.estate_id">
-                                        Estate <t t-esc="batch.estate_id.name"/>
-                                    </t>
-                                    <t t-if="batch.division_id">
-                                        Division <t t-esc="batch.division_id.name"/>
-                                    </t>
-                                    (<t t-esc="datetime.datetime.strptime(batch.date_start, '%Y-%m-%d').strftime('%d-%b-%Y')"/>
-                                    - <t t-esc="datetime.datetime.strptime(batch.date_end, '%Y-%m-%d').strftime('%d-%b-%Y')"/>)
-                                </small>
-                            </h2>
+                            <h2 class="text-center">Rekapitulasi Daftar Upah KHL</h2>
+
+                            <table class="table-condensed table-borderless" style="font-size:65%" width="100%">
+                                <tr>
+                                    <td width="20%"><strong>Kebun</strong></td>
+                                    <td width="50%">: <t t-if="batch.estate_id"><t t-esc="batch.estate_id.name"/></t></td>
+                                    <td width="15%" class="text-right"><strong>HK/Bulan</strong></td>
+                                    <td width="15%"></td>
+                                </tr>
+                                <tr>
+                                    <td width="20%"><strong>Divisi</strong></td>
+                                    <td width="50%">: <t t-if="batch.division_id"><t t-esc="batch.division_id.name"/></t></td>
+                                    <td width="15%" class="text-right"><strong>HK/Hari</strong></td>
+                                    <td width="15%"></td>
+                                </tr>
+                                <tr>
+                                    <td width="20%"><strong>Periode</strong></td>
+                                    <td width="50%">: <t t-esc="datetime.datetime.strptime(batch.date_start, '%Y-%m-%d').strftime('%d-%b-%Y')"/>
+                                        - <t t-esc="datetime.datetime.strptime(batch.date_end, '%Y-%m-%d').strftime('%d-%b-%Y')"/></td>
+                                    <td width="15%" class="text-right"></td>
+                                    <td width="15%"></td>
+                                </tr>
+                            </table>
+
                             <table class="table table-striped table-condensed table-bordered" style="font-size:65%">
                                 <thead>
                                     <tr>
                                         <th rowspan="2">no.</th>
                                         <th rowspan="2">Name</th>
-                                        <th rowspan="2">ID</th>
+                                        <th rowspan="2">NIK</th>
                                         <th rowspan="2">Type</th>
                                         <th colspan="6" class="text-center">Wage</th>
                                         <th rowspan="2">Allowance</th>
@@ -55,35 +67,52 @@
                                         <!-- do not use code as header - i18n problem -->
                                         <th>HK</th>
                                         <th>Gaji</th>
-                                        <th>Jam</th>
+                                        <th>Rp</th>
                                         <th>Lembur</th>
-                                        <th>Premi</th>
+                                        <th>Rp</th>
                                         <th>Koreksi</th>
                                         <th>BPJS TK</th>
                                         <th>BPJS K</th>
                                         <th>Pajak</th>
                                     </tr>
-
                                 </thead>
+                                <!-- payslip team -->
                                 <t t-foreach="get_team(batch.slip_ids)" t-as="team">
-                                    <tr>
-                                        <td colspan="17">
-                                            <strong>
-                                                <t t-if="not team.name">
-                                                    Non Kemandoran
-                                                </t>
-                                                <span t-esc="team.name"/>
-                                                <t t-if="team.name">(Leader <t t-esc="team.employee_id.name"/>)</t>
-                                            </strong>
-                                        </td>
-                                    </tr>
                                     <tbody>
+                                        <!-- Reset variable per team -->
                                         <t t-set="amount_total_team" t-value="0"/>
                                         <t t-set="amount_total_other" t-value="0"/>
                                         <t t-set="no" t-value="0"/>
+                                        <t t-set="total_day" t-value="0"/>
+                                        <t t-set="total_edw" t-value="0"/>
+                                        <t t-set="total_hour" t-value="0"/>
+                                        <t t-set="total_ot" t-value="0"/>
+                                        <t t-set="total_pr" t-value="0"/>
+                                        <t t-set="total_adj" t-value="0"/>
+                                        <t t-set="total_allowance" t-value="0"/>
+                                        <t t-set="total_deduction" t-value="0"/>
+                                        <t t-set="total_total" t-value="0"/>
+                                        <t t-set="total_st_wage" t-value="0"/>
+                                        <t t-set="total_bpjs_tk" t-value="0"/>
+                                        <t t-set="total_bpjs_k" t-value="0"/>
+                                        <t t-set="total_tax" t-value="0"/>
+                                        <t t-set="total_st_other" t-value="0"/>
+
                                         <t t-set="last_row" t-value="len(get_payslip_team(team.id, batch.date_start, batch.date_end))"/>
                                         <t t-set="round" t-value="1000"/>
 
+                                        <tr>
+                                            <td colspan="17">
+                                                <strong>
+                                                    <t t-if="not team.name">
+                                                        Non Kemandoran
+                                                    </t>
+                                                    <span t-esc="team.name"/>
+                                                    <t t-if="team.name">(Mandor <t t-esc="team.employee_id.name"/>)</t>
+                                                </strong>
+                                            </td>
+                                        </tr>
+                                        <!-- payslip team member-->
                                         <t t-foreach="get_payslip_team(team.id, batch.date_start, batch.date_end)" t-as="payslip">
                                             <!-- only print payslip with done state -->
                                             <t t-if="payslip.state== 'done'">
@@ -139,6 +168,7 @@
                                                     <t t-set="total_adj" t-value="total_adj + amount_adj"/>
                                                     <t t-set="total_allowance" t-value="total_allowance + amount_allowance"/>
                                                     <t t-set="total_deduction" t-value="total_deduction + amount_deduction"/>
+                                                    <!--<t t-set="total_total" t-value="total_total + amount_total"/>-->
                                                     <t t-set="total_st_wage" t-value="total_st_wage + amount_total"/>
                                                     <t t-set="total_bpjs_tk" t-value="total_bpjs_tk + amount_bpjs_labour"/>
                                                     <t t-set="total_bpjs_k" t-value="total_bpjs_k + amount_bpjs_health"/>
@@ -148,8 +178,26 @@
                                                 </tr>
                                             </t>
                                         </t>
+                                        <!-- /payslip team member -->
+                                        <tr>
+                                            <td colspan="4" class="text-right">Sub Total <t t-if="team.name">Mandor <t t-esc="team.employee_id.name"/></t></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_day)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_edw)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_hour)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_ot)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_pr)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_adj)"/></td>
+                                            <td class="text-right"></td>
+                                            <td class="text-right"><t t-esc="'({0:,.2f})'.format(total_deduction)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(amount_total_team)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_bpjs_tk)"/></td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_bpjs_k)"/></td>
+                                            <td class="text-right">0</td>
+                                            <td class="text-right"><t t-esc="'{0:,.2f}'.format(total_st_other)"/></td>
+                                        </tr>
                                     </tbody>
                                 </t>
+                                <!-- /payslip team -->
                                 <tr>
                                     <td colspan="4" class="text-right"><strong>Total</strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.1f}'.format(total_day)"/></strong></td>
@@ -167,7 +215,6 @@
                                     <td class="text-right"><strong><t t-esc="'{0:,.2f}'.format(total_st_other)"/></strong></td>
                                 </tr>
                             </table>
-
 
                             <!-- Signature #1 -->
                             <table class="borderless" width="100%">
@@ -216,21 +263,34 @@
                                 <t t-set="total_bpjs_k_team" t-value="0"/>
                                 <t t-set="total_tax_team" t-value="0"/>
 
+                                <h2 class="text-center">Rekapitulasi Daftar Upah KHL</h2>
 
+                                <table class="table-condensed table-borderless" style="font-size:65%" width="100%">
+                                    <tr>
+                                        <td width="20%"><strong>Kebun</strong></td>
+                                        <td width="50%">: <t t-if="batch.estate_id"><t t-esc="batch.estate_id.name"/></t></td>
+                                        <td width="15%" class="text-right"><strong>HK/Bulan</strong></td>
+                                        <td width="15%">XX</td>
+                                    </tr>
+                                    <tr>
+                                        <td width="20%"><strong>Divisi</strong></td>
+                                        <td width="50%">: <t t-if="batch.division_id"><t t-esc="batch.division_id.name"/></t></td>
+                                        <td width="15%" class="text-right"><strong>HK/Hari</strong></td>
+                                        <td width="15%">XX</td>
+                                    </tr>
+                                    <tr>
+                                        <td width="20%"><strong>Periode</strong></td>
+                                        <td width="50%">: <t t-esc="datetime.datetime.strptime(batch.date_start, '%Y-%m-%d').strftime('%d-%b-%Y')"/>
+                                            - <t t-esc="datetime.datetime.strptime(batch.date_end, '%Y-%m-%d').strftime('%d-%b-%Y')"/></td>
+                                        <td width="15%" class="text-right"></td>
+                                        <td width="15%"></td>
+                                    </tr>
+                                </table>
 
-                                <h2 class="text-center">Payroll <span t-esc="batch.name"/><br/>
-                                    <t t-if="batch.estate_id">
-                                        <small>Estate <t t-esc="batch.estate_id.name"/></small>
-                                    </t>
-                                    <t t-if="batch.division_id">
-                                        <small>Division <t t-esc="batch.division_id.name"/></small>
-                                    </t>
-                                    <small>(<t t-esc="datetime.datetime.strptime(batch.date_start, '%Y-%m-%d').strftime('%d-%b-%Y')"/>
-                                    - <t t-esc="datetime.datetime.strptime(batch.date_end, '%Y-%m-%d').strftime('%d-%b-%Y')"/>)</small>
-                                </h2>
                                 <t t-if="not team.name">
                                     <h3>Non Kemandoran</h3>
                                 </t>
+
                                 <h3><t t-esc="team.name"/> <t t-if="team.name">(Leader <t t-esc="team.employee_id.name"/>)</t></h3>
                                 <table class="table table-striped table-condensed table-bordered" style="font-size:65%">
                                     <thead>
@@ -268,9 +328,6 @@
                                         <t t-set="round" t-value="1000"/>
 
                                         <t t-foreach="get_payslip_team(team.id, batch.date_start, batch.date_end)" t-as="payslip">
-
-
-
                                             <!-- only print payslip with done state -->
                                             <t t-if="payslip.state=='done'">
                                                 <tr>
@@ -378,27 +435,29 @@
                                                     <td style="width: 120px">Dibuat oleh,</td>
                                                     <td style="width: 360px" colspan="3">Diperiksa oleh,</td>
                                                     <td style="width: 360px" colspan="3">Disetujui oleh,</td>
-                                                    <td style="width: 120px">Diketahui oleh,</td>
+                                                    <td style="width: 240px" colspan="2">Diketahui oleh,</td>
                                                 </tr>
                                                 <tr style="height: 80px">
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
+                                                    <td width="120px"></td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td><u>Eny Maryoto</u><br/>Kerani</td>
+                                                    <td><br/>Senior Kerani Administrasi</td>
                                                     <td><u><t t-esc="team.assistant_id.name"/></u><br/>Asisten</td>
-                                                    <td><u>Muh Wahid A.A.</u><br/>Kase</td>
-                                                    <td><u>NN</u><br/>KTU</td>
+                                                    <td><br/>KTU</td>
+                                                    <td><br/>HR GA Head Assistant</td>
                                                     <td><u>Agus Prabowo</u><br/>Estate Manager</td>
-                                                    <td><u>Petrus T. Wijoyo</u><br/>Ka Perwakilan</td>
-                                                    <td><u>Ekos Albar</u><br/>Direktur</td>
-                                                    <td><u>Mertha Lidyawati</u><br/>HR Manager</td>
+                                                    <td><u>Petrus T. Wijoyo</u><br/>GM Operation</td>
+                                                    <td><u>Ekos Albar</u><br/>Director</td>
+                                                    <td><u>Cahyo Wibawanto</u><br/>Agronomy Dept. Head</td>
+                                                    <td><u>Mertha Lidyawati</u><br/>HR Dept. Head</td>
                                                 </tr>
                                             </table>
                                         </td>
